Bug 403565. Give each contentviewer it's own device context. r+sr=bzbarsky